sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:10: error: type mismatch;
 found   : Int(0)
 required: String
		i=0
                  ^AlgCombSort:11: error: type mismatch;
 found   : Int
 required: String
		while (i+ecart<getNombreValeurs()) {
                                               ^AlgCombSort:12: error: type mismatch;
 found   : String
 required: Int
			if (!plusPetit(i,i+ecart)) {
                                       ^AlgCombSort:13: error: type mismatch;
 found   : String
 required: Int
				echange(i,i+ecart)
                                        ^