sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {
	var ecart=getNombreValeurs()
	var i=""
	var swap=false
	while (ecart>1 | !swap) {
		if (ecart>1) {
			ecart = (ecart.toDouble / 1.3).toInt
		}
		i=0
		while (i+ecart<getNombreValeurs()) {
			if (!plusPetit(i,i+ecart)) {
				echange(i,i+ecart)
				swap=true
			}
			i=i+1
		}
	}
}